# gothic-remake-rust-save-manipulation-tool

./: Cargo.toml  README.md
crates/gothic-save/: Cargo.toml
crates/gothic-save-cli/: Cargo.toml
crates/gothic-save-cli/src/: main.rs
crates/gothic-save/src/: error.rs  lib.rs  save.rs
