[workspace]
resolver = "2"
members = ["crates/gothic-save", "crates/gothic-save-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ClarkGH/gothic-remake-rust-save-manipulation-tool"

[workspace.dependencies]
# Shared versions — crates reference these as workspace = true
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }